More small styling fixes
This will fix the extra margin added on mobile devices when using the secondary link next to the continue button, as well as the sizing of the password input on mobile devices too.

--- a/app/assets/stylesheets/local/buttons.scss
+++ b/app/assets/stylesheets/local/buttons.scss
@@ -23,12 +23,6 @@
   padding-left: 0;
   padding-right: 0;
 
-  // This targets in between adjacent siblings:  https://alistapart.com/article/axiomatic-css-and-lobotomized-owls
-  * + & {
-    margin-left: 96px;
-    margin-left: 6rem;
-  }
-
   &:link,
   &:active,
   &:visited,
